--- a/src/main/resources/view/ViewDetails.fxml
+++ b/src/main/resources/view/ViewDetails.fxml
@@ -13,12 +13,14 @@
             <Label fx:id="name" layoutX="238.0" layoutY="180.0" prefHeight="17.0" prefWidth="124.0" />
             <ImageView fx:id="image" fitHeight="150.0" fitWidth="200.0" layoutX="200.0" pickOnBounds="true" preserveRatio="true" />
             <Label fx:id="ID" layoutX="238.0" layoutY="206.0" prefHeight="17.0" prefWidth="124.0" />
+            <Label fx:id="cost" layoutX="238.0" layoutY="215.0" prefHeight="17.0" prefWidth="124.0" />
          </children>
       </Pane>
       <Pane prefHeight="200.0" prefWidth="200.0">
          <children>
-            <Button fx:id="AddToCart" layoutX="254.0" layoutY="94.0" mnemonicParsing="false" onAction="#handleAddToCart" text="Add To Cart" />
+            <Button fx:id="AddToCart" layoutX="374.0" layoutY="84.0" mnemonicParsing="false" onAction="#handleAddToCart" text="Add To Cart" />
             <Label fx:id="description" layoutX="283.0" layoutY="35.0" />
+            <Button fx:id="Return" layoutX="152.0" layoutY="84.0" mnemonicParsing="false" onAction="#handleReturn" text="Back" />
          </children>
       </Pane>
    </children>
