--- a/src/main/resources/view/ViewDetails.fxml
+++ b/src/main/resources/view/ViewDetails.fxml
@@ -6,21 +6,38 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ViewDetailsController">
     <children>
-        <VBox>
-            <ImageView fx:id="itemImageView" fitHeight="150.0" fitWidth="200.0" layoutX="200.0" pickOnBounds="true" preserveRatio="true" />
-            <Text fx:id="idText"/>
-            <Text fx:id="nameText"/>
-            <Text fx:id="costText"/>
-            <Text fx:id="descriptionText"/>
-        </VBox>
-        <TableView>
-            <!-- todo: reviews -->
-        </TableView>
         <HBox>
-            <Button fx:id="AddToCart" layoutX="374.0" layoutY="84.0" mnemonicParsing="false" onAction="#handleAddToCart" text="Add To Cart" />
-            <Text fx:id="addToCartStatusText"/>
+            <ImageView fx:id="itemImageView" fitHeight="150.0" fitWidth="200.0" layoutX="200.0" pickOnBounds="true" preserveRatio="true" />
+            <VBox alignment="CENTER_LEFT">
+                <Text fx:id="idText"/>
+                <Text fx:id="nameText"/>
+                <Text fx:id="costText"/>
+                <Text fx:id="descriptionText"/>
+            </VBox>
         </HBox>
+        <VBox alignment="CENTER">
+            <Text text="Reviews"/>
+            <TableView items="${controller.currentItem.reviews}">
+                <placeholder>
+                    <Label text="No results found."/>
+                </placeholder>
+                <columns>
+                    <TableColumn text="UserId">
+                        <cellValueFactory><PropertyValueFactory property="userId"/></cellValueFactory>
+                    </TableColumn>
+                    <TableColumn text="Comment">
+                        <cellValueFactory><PropertyValueFactory property="comment"/></cellValueFactory>
+                    </TableColumn>
+                    <TableColumn text="Date">
+                        <cellValueFactory><PropertyValueFactory property="date"/></cellValueFactory>
+                    </TableColumn>
+                </columns>
+            </TableView>
+            <Button layoutX="374.0" layoutY="84.0" mnemonicParsing="false" onAction="#handleAddToCart" text="Add To Cart" />
+            <Text fx:id="addToCartStatusText"/>
+        </VBox>
     </children>
 </VBox>
