--- a/src/main/resources/view/signup.fxml
+++ b/src/main/resources/view/signup.fxml
@@ -1,26 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="200.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1">
-    <children>
-        <HBox alignment="CENTER" layoutX="136.0" layoutY="66.0" prefHeight="50.0" prefWidth="100.0">
-            <children>
-                <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="216.0" text="SignUp Page " textFill="#05eb24">
-                    <font>
-                        <Font name="Arial Black" size="15.0" />
-                    </font>
-                    <HBox.margin>
-                        <Insets />
-                    </HBox.margin>
-                </Label>
-
-            </children>
-        </HBox>
-
-    </children>
-</AnchorPane>
+<VBox alignment="center" prefHeight="200.0" prefWidth="400.0" spacing="10" styleClass="root" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" >
+    <Label styleClass="h1" text="Online Electronic Store ">
+        <font>
+            <Font name="Garamond Bold" size="16.0" />
+        </font>
+        <VBox.margin>
+            <Insets bottom="10.0" />
+        </VBox.margin></Label>
+    <HBox alignment="CENTER">
+        <Label text="First Name">
+            <padding>
+                <Insets right="10.0" />
+            </padding>
+            <font>
+                <Font name="Gill Sans MT" size="14.0" />
+            </font></Label>
+        <TextField  promptText="FirstName" />
+    </HBox>
+    <HBox alignment="CENTER">
+        <Label text="Last Name">
+            <padding>
+                <Insets right="10.0" />
+            </padding>
+            <font>
+                <Font name="Gill Sans MT" size="14.0" />
+            </font></Label>
+        <TextField promptText="LastName" />
+    </HBox>
+    <HBox alignment="CENTER">
+        <Label text="Login ID">
+            <padding>
+                <Insets right="10.0" />
+            </padding>
+            <font>
+                <Font name="Gill Sans MT" size="14.0" />
+            </font></Label>
+        <TextField fx:id="emailTextField" promptText="LoginID" />
+    </HBox>
+    <HBox alignment="CENTER">
+        <Label alignment="CENTER" styleClass="h2" text="Password">
+            <padding>
+                <Insets right="5.0" />
+            </padding>
+            <font>
+                <Font name="Gill Sans MT" size="14.0" />
+            </font></Label>
+        <PasswordField fx:id="passwordField" promptText="Password" />
+    </HBox>
+    <Button  text="Sign-up">
+        <HBox.margin>
+            <Insets left="10.0" />
+        </HBox.margin></Button>
+</VBox>
