--- a/src/main/resources/view/SearchItems.fxml
+++ b/src/main/resources/view/SearchItems.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="center" prefHeight="591.0" prefWidth="627.0" spacing="10" styleClass="root" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="controller.SearchItemsController">
+<VBox alignment="center" prefHeight="591.0" prefWidth="627.0" spacing="10" styleClass="root" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SearchItemsController">
    <AnchorPane prefHeight="601.0" prefWidth="627.0">
       <children>
          <Label layoutX="36.0" layoutY="27.0" prefHeight="38.0" prefWidth="159.0" styleClass="h1" text="Online Electronics Store">
@@ -23,99 +23,103 @@
          <TextField fx:id="txtsearchKeyword" layoutX="231.0" layoutY="34.0" prefHeight="25.0" prefWidth="308.0" promptText="Type to search for an item..." />
          <AnchorPane layoutX="25.0" layoutY="77.0" prefHeight="500.0" prefWidth="578.0" style="-fx-background-color: white;">
             <children>
-               <ComboBox fx:id="cbSortBy" layoutX="413.0" layoutY="49.0" onAction="#cbSortByOnSelectedIndexChanged" prefHeight="25.0" prefWidth="120.0" promptText="Sort By" />
-               <Label layoutX="28.0" layoutY="14.0" prefHeight="25.0" prefWidth="88.0" styleClass="h1" text="Keywords">
+               <ComboBox fx:id="cbSortBy" layoutX="413.0" layoutY="56.0" onAction="#cbSortByOnSelectedIndexChanged" prefHeight="25.0" prefWidth="120.0" promptText="Sort By" />
+               <Label fx:id="lblKeyword" layoutX="28.0" layoutY="14.0" prefHeight="25.0" prefWidth="88.0" styleClass="h1" text="Keywords">
                   <font>
                      <Font size="14.0" />
                   </font>
                </Label>
-               <Label fx:id="hiddenfield1" text="0" visible="false" />
-               <Label layoutX="94.0" layoutY="19.0" opacity="0.62" prefHeight="17.0" prefWidth="159.0" text="Showing 1- 3 of 189">
+               <Label fx:id="hiddenfield" text="0" visible="false" />
+               <Label fx:id="lblShowing" layoutX="28.0" layoutY="31.0" opacity="0.62" prefHeight="17.0" prefWidth="159.0" text="Showing 1- 3 of 189">
                   <font>
                      <Font size="10.0" />
                   </font>
                </Label>
-               <Label layoutX="46.0" layoutY="53.0" prefHeight="17.0" prefWidth="70.0" text="Price Range" />
-               <Label layoutX="159.0" layoutY="53.0" prefHeight="17.0" prefWidth="14.0" text="to" />
-               <TextField layoutX="114.0" layoutY="49.0" prefHeight="25.0" prefWidth="43.0" promptText="\$0.00" />
-               <TextField layoutX="172.0" layoutY="49.0" prefHeight="25.0" prefWidth="43.0" promptText="\$0.00" />
-               <Button layoutX="221.0" layoutY="49.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="36.0" text="Go" />
-               <Button layoutX="46.0" layoutY="92.0" mnemonicParsing="false" prefHeight="115.0" prefWidth="487.0">
+               <Label layoutX="46.0" layoutY="60.0" prefHeight="17.0" prefWidth="70.0" text="Price Range" />
+               <Label layoutX="159.0" layoutY="60.0" prefHeight="17.0" prefWidth="14.0" text="to" />
+               <TextField fx:id="txtPriceMin" layoutX="114.0" layoutY="56.0" prefHeight="25.0" prefWidth="43.0" promptText="0" />
+               <TextField fx:id="txtPriceMax" layoutX="172.0" layoutY="56.0" prefHeight="25.0" prefWidth="77.0" promptText="999999999" />
+               <Button fx:id="btnGo" layoutX="256.0" layoutY="56.0" mnemonicParsing="false" onAction="#btnGo_Click" prefHeight="25.0" prefWidth="36.0" text="Go" />
+               <Button fx:id="btnProduct1" layoutX="46.0" layoutY="92.0" mnemonicParsing="false" onAction="#handleViewDetails" prefHeight="115.0" prefWidth="487.0">
                   <graphic>
-                     <SplitPane dividerPositions="0.24520255863539445" prefHeight="97.0" prefWidth="471.0">
+                     <SplitPane fx:id="spProduct1" dividerPositions="0.24520255863539445" onMouseClicked="#handleViewDetails" prefHeight="97.0" prefWidth="471.0">
                         <items>
-                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="105.0" prefWidth="119.0">
+                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="105.0" prefWidth="119.0" style="-fx-background-color: white;">
                               <children>
-                                 <ImageView fitHeight="106.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" />
+                                 <ImageView fx:id="img1" fitHeight="106.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" />
                               </children>
                            </AnchorPane>
                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="95.0" prefWidth="341.0">
                               <children>
-                                 <Label layoutX="11.0" layoutY="12.0" prefHeight="17.0" prefWidth="275.0" text="Name" />
-                                 <Label layoutX="11.0" layoutY="27.0" prefHeight="45.0" prefWidth="317.0" text="Description">
+                                 <Label fx:id="lblName1" layoutX="11.0" layoutY="12.0" prefHeight="17.0" prefWidth="275.0" text="Name" />
+                                 <Label fx:id="lblDescription1" layoutX="11.0" layoutY="27.0" prefHeight="45.0" prefWidth="317.0" text="Description">
                                     <font>
                                        <Font name="System Italic" size="10.0" />
                                     </font>
                                  </Label>
-                                 <Label layoutX="11.0" layoutY="72.0" prefHeight="17.0" prefWidth="268.0" text="Price" />
+                                 <Label fx:id="lblPrice1" layoutX="11.0" layoutY="72.0" prefHeight="17.0" prefWidth="268.0" text="Price" />
+                                 <Label fx:id="hfID1" visible="false" /> 
+                              </children>
+                           </AnchorPane>
+                        </items>
+                        
+                     </SplitPane>
+                  </graphic>
+               </Button>
+               <Button fx:id="btnProduct2" layoutX="46.0" layoutY="214.0" mnemonicParsing="false" onAction="#handleViewDetails" prefHeight="115.0" prefWidth="487.0">
+                  <graphic>
+                     <SplitPane fx:id="spProduct2" dividerPositions="0.24520255863539445" onMouseClicked="#handleViewDetails" prefHeight="97.0" prefWidth="471.0">
+                        <items>
+                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="105.0" prefWidth="119.0" style="-fx-background-color: white;">
+                              <children>
+                                 <ImageView fx:id="img2" fitHeight="106.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" />
+                              </children>
+                           </AnchorPane>
+                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="95.0" prefWidth="341.0">
+                              <children>
+                                 <Label fx:id="lblName2" layoutX="11.0" layoutY="12.0" prefHeight="17.0" prefWidth="275.0" text="Name" />
+                                 <Label fx:id="lblDescription2" layoutX="11.0" layoutY="27.0" prefHeight="45.0" prefWidth="317.0" text="Description">
+                                    <font>
+                                       <Font name="System Italic" size="10.0" />
+                                    </font>
+                                 </Label>
+                                 <Label fx:id="lblPrice2" layoutX="11.0" layoutY="72.0" prefHeight="17.0" prefWidth="268.0" text="Price" />
+                                 <Label fx:id="hfID2" visible="false" /> 
                               </children>
                            </AnchorPane>
                         </items>
                      </SplitPane>
                   </graphic>
                </Button>
-               <Button layoutX="46.0" layoutY="214.0" mnemonicParsing="false" prefHeight="115.0" prefWidth="487.0">
+               <Button fx:id="btnProduct3" layoutX="46.0" layoutY="336.0" mnemonicParsing="false" onAction="#handleViewDetails" prefHeight="115.0" prefWidth="487.0">
                   <graphic>
-                     <SplitPane dividerPositions="0.24520255863539445" prefHeight="97.0" prefWidth="471.0">
+                     <SplitPane fx:id="spProduct3" dividerPositions="0.24520255863539445" onMouseClicked="#handleViewDetails" prefHeight="97.0" prefWidth="471.0">
                         <items>
-                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="105.0" prefWidth="119.0">
+                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="105.0" prefWidth="119.0" style="-fx-background-color: white;">
                               <children>
-                                 <ImageView fitHeight="106.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" />
+                                 <ImageView fx:id="img3" fitHeight="106.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" />
                               </children>
                            </AnchorPane>
                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="95.0" prefWidth="341.0">
                               <children>
-                                 <Label layoutX="11.0" layoutY="12.0" prefHeight="17.0" prefWidth="275.0" text="Name" />
-                                 <Label layoutX="11.0" layoutY="27.0" prefHeight="45.0" prefWidth="317.0" text="Description">
+                                 <Label fx:id="lblName3" layoutX="11.0" layoutY="12.0" prefHeight="17.0" prefWidth="275.0" text="Name" />
+                                 <Label fx:id="lblDescription3" layoutX="11.0" layoutY="27.0" prefHeight="45.0" prefWidth="317.0" text="Description">
                                     <font>
                                        <Font name="System Italic" size="10.0" />
                                     </font>
                                  </Label>
-                                 <Label layoutX="11.0" layoutY="72.0" prefHeight="17.0" prefWidth="268.0" text="Price" />
+                                 <Label fx:id="lblPrice3" layoutX="11.0" layoutY="72.0" prefHeight="17.0" prefWidth="268.0" text="Price" />
+                                 <Label fx:id="hfID3" visible="false" /> 
                               </children>
                            </AnchorPane>
                         </items>
                      </SplitPane>
                   </graphic>
                </Button>
-               <Button layoutX="46.0" layoutY="336.0" mnemonicParsing="false" prefHeight="115.0" prefWidth="487.0">
-                  <graphic>
-                     <SplitPane dividerPositions="0.24520255863539445" prefHeight="97.0" prefWidth="471.0">
-                        <items>
-                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="105.0" prefWidth="119.0">
-                              <children>
-                                 <ImageView fitHeight="106.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" />
-                              </children>
-                           </AnchorPane>
-                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="95.0" prefWidth="341.0">
-                              <children>
-                                 <Label layoutX="11.0" layoutY="12.0" prefHeight="17.0" prefWidth="275.0" text="Name" />
-                                 <Label layoutX="11.0" layoutY="27.0" prefHeight="45.0" prefWidth="317.0" text="Description">
-                                    <font>
-                                       <Font name="System Italic" size="10.0" />
-                                    </font>
-                                 </Label>
-                                 <Label layoutX="11.0" layoutY="72.0" prefHeight="17.0" prefWidth="268.0" text="Price" />
-                              </children>
-                           </AnchorPane>
-                        </items>
-                     </SplitPane>
-                  </graphic>
-               </Button>
-               <Button layoutX="254.0" layoutY="463.0" mnemonicParsing="false" text="&lt;" />
-               <Button layoutX="301.0" layoutY="463.0" mnemonicParsing="false" text="&gt;" />
-               <Button layoutX="336.0" layoutY="463.0" mnemonicParsing="false" text="&gt;&gt;" />
-               <Button layoutX="211.0" layoutY="463.0" mnemonicParsing="false" text="&lt;&lt;" />
+               <Button fx:id="btnPrevious" layoutX="254.0" layoutY="463.0" mnemonicParsing="false" onAction="#loadPreviousPage" text="&lt;" />
+               <Button fx:id="btnNext" layoutX="301.0" layoutY="463.0" mnemonicParsing="false" onAction="#loadNextPage" text="&gt;" />
+               <Button fx:id="btnLast" layoutX="336.0" layoutY="463.0" mnemonicParsing="false" onAction="#loadLastPage" text="&gt;&gt;" />
+               <Button fx:id="btnFirst" layoutX="211.0" layoutY="463.0" mnemonicParsing="false" onAction="#loadFirstPage" text="&lt;&lt;" />
             </children>
             <effect>
                <InnerShadow color="#e3e3e3" />
